--- a/views/home.erb
+++ b/views/home.erb
@@ -10,7 +10,7 @@ Welcome to tic tac toe.
             <li class = "textcolor1"><a href = "/">Home</a></li>
             <li class = "textcolor1"><a href = "/history">History</a></li>
             <li class = "textcolor2"><a href = "/rules">How to Play</a></li>
-            <li class = "textcolor2"><a href = "/play_game">Play Tic Tac Toe</a></li>
+            <li class = "textcolor2"><a href = "/player_1_name">Play Tic Tac Toe</a></li>
         </ul>
     </header>
  </body>   
