--- a/views/home.erb
+++ b/views/home.erb
@@ -1,17 +1,11 @@
-<link rel = "stylesheet" href = "css/style.css">
 
-<center><br><p class = "textcolor">
-Welcome to tic tac toe.
-<br></p></center>
 
 <body>
-    <header>
-        <ul>
-            <li class = "textcolor1"><a href = "/">Home</a></li>
-            <li class = "textcolor1"><a href = "/history">History</a></li>
-            <li class = "textcolor2"><a href = "/rules">How to Play</a></li>
-            <li class = "textcolor2"><a href = "/player_1_name">Play Tic Tac Toe</a></li>
-        </ul>
-    </header>
+   <p><a></a></p>
  </body>   
- <footer><center><a href = "http://www.minedminds.org">Mined Minds</a></center></footer>
+ 
+
+
+</center>
+
+
